content spacing with sidebar now fixed

--- a/src/renderer/scss/_variables.scss
+++ b/src/renderer/scss/_variables.scss
@@ -2,7 +2,7 @@
 $logo-primary: #2196f3;
 
 // sidebar stuff
-$sidebar-width: 8%;
+$sidebar-width: 5rem;
 
 // footer stuff
 $footer-height: 1.3rem;
