--- a/src/renderer/scss/main.scss
+++ b/src/renderer/scss/main.scss
@@ -48,10 +48,29 @@ html {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     font-family: sans-serif;
-    font-size: 14px;
     line-height: 1.15;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+
+    font-size: 16px;
+    @media screen and (min-width: 1600px) { // Large Monitors/HiDPI
+        font-size: 18px;
+    }
+    @media screen and (max-width: 1400px) { // Small Laptops
+        font-size: 14px;
+    } 
+    @media screen and (max-width: 1100px) { // Tablet Landscape
+        font-size: 13px;
+    }
+    @media screen and (max-width: 800px) {  // Tablet Portrait
+        font-size: 12px;
+    }
+    @media screen and (max-width: 500px) {  // Mobile Landscape
+        font-size: 7px;
+    }
+    @media screen and (max-width: 400px) {  // Mobile Portrait
+        font-size: 5px;
+    }
 }
 
 body {
@@ -136,13 +155,6 @@ a {
     min-height: 100%;
     height: auto !important;
     position: relative;
-}
-
-#page-content-wrapper {
-    padding: 0px 0px;
-    padding-top: 0px;
-    margin-right: -5rem;
-    position: absolute;
 }
 
 #main-content-wrapper {
